<resources>
    <string name="app_name">HandyrraC</string>
    <string name="foods_name">Nama Makanan</string>
    <string name="description">Deskripsi</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="specification">Spesifikasi</string>
    <string name="display">Daerah</string>
    <string name="size">Jenis</string>
    <string name="battery">Sejarah</string>
    <string name="content_aboutme"> I am a fifth-semester Informatic Engineering student with a strong interest in technology and everything related to logic. Throughout my studies, I have learned several programming languages, including C++, Java, Phyton, and Kotlin. Additionally, I have studied web development and 3D modeling. In the field of 3D modeling, I use software like Blender and SketchUp, and I greatly enjoy the creative process of building 3D models.</string>
    <string name="content_domicile">Cilacap, Central Java</string>
    <string name="content_no">+62 852 9116 0775</string>
    <string name="content_email">isnan238@gmail.com</string>
    <string name="content_ig">almond.dy</string>
    <string name="content_motto">If you dont move, nothing will change.</string>
    <string name="myname">Isna Nurul Azizah</string>
    <string name="more">More About Me</string>
    <string name="domicile">Domicile</string>
    <string name="no">Phone</string>
    <string name="email">Email</string>
    <string name="ig">Social Media</string>
    <string name="motto">Motto</string>
    <string-array name="data_name">
        <item>Bakpia Pathok</item>
        <item>Bika Ambon</item>
        <item>Brem</item>
        <item>Cenil</item>
        <item>Dodol</item>
        <item>Getuk Goreng</item>
        <item>Kasunami</item>
        <item>Kue Ape</item>
        <item>Semprong</item>
        <item>Lempuk Durian</item>
        <item>Serabi</item>
        <item>Tenteng Malino</item>
    </string-array>
    <string-array name="data_desc">
        <item>Oleh-oleh khas Yogyakarta.</item>
        <item>Oleh-oleh khas Medan.</item>
        <item>Oleh-oleh khas Madiun.</item>
        <item>Oleh-oleh khas Pacitan.</item>
        <item>Oleh-oleh khas Garut.</item>
        <item>Oleh-oleh khas Sokaraja.</item>
        <item>Oleh-oleh khas Wakatobi.</item>
        <item>Oleh-oleh khas Jakarta.</item>
        <item>Oleh-oleh khas Cimahi.</item>
        <item>Oleh-oleh khas Sumatra.</item>
        <item>Oleh-oleh khas Surakarta.</item>
        <item>Oleh-oleh khas Malino.</item>
    </string-array>
    <string-array name="data_description">
        <item>Bakpia Pathuk adalah kue berbentuk bulat pipih, terbuat dari campuran kacang hijau dengan gula, yang dibungkus dengan tepung, lalu dipanggang. Bakpia asal mulanya berasal dari daratan Tiongkok. Bakpia pathok adalah salah satu varian bakpia yang berkembang di Yogyakarta. Saat ini, bakpia pathuk menjadi salah satu makanan khas sekaligus oleh-oleh khas dari Yogyakarta. Ini merupakan salah satu wujud nyata akulturasi budaya Tiongkok dan budaya Jawa, dalam hal ini budaya Yogyakarta.</item>
        <item>Bika Ambon adalah kue tradisional khas Medan, Indonesia. Kue ini terbuat dari bahan-bahan seperti tepung tapioka, telur, gula, dan santan. Bika Ambon dimasak selama 12 jam[1] agar dapat bertahan dalam kondisi terbaik dan sesuai apa yang diinginkan selama empat hari karena setelahnya kue tersebut mulai mengeras. Kue basah ini biasanya memiliki jaring-jaring pada bagian dalam. Bika ambon juga dijual dengan berbagai macam rasa, seperti pandan, coklat, keju, dan lain-lain.</item>
        <item>Brem adalah makanan yang berasal dari sari ketan yang dimasak dan dikeringkan, merupakan hasil dari fermentasi ketan hitam yang diambil sarinya saja yang kemudian diendapkan dalam waktu sekitar sehari semalam. Sensasi makanan ini muncul ketika makanan dimasukkan ke dalam mulut akan langsung mencair dan lenyap meninggalkan rasa semriwing di lidah.</item>
        <item>Cetil (cêtil) adalah penganan yang dibuat dari adonan tepung kanji dan gula pasir, diberi pewarna, dibentuk menjadi bulatan-bulatan kecil, dimakan dengan kelapa parut.Cenil atau cetil merupakan penganan tradisional khas Jawa yang populer di wilayah Jawa Tengah, Jawa Timur, dan Daerah Istimewa Yogyakarta. Penganan ini berasal dari Kabupaten Pacitan, Jawa Timur. Cenil biasanya dijual bersama dengan klepon, kicak, getuk, ciwel, cantel, pertolo, dan tepo.</item>
        <item>Dodol Garut Aksara Sunda adalah camilan khas Sunda yang berasal dari Kabupaten Garut, Jawa Barat. Pada umumnya produk Dodol Garut yang ada di pasaran memiliki karakteristik yang serupa antara satu merek dengan merek lainnya baik dari bentuk, aroma, cita rasa, harga dan kemasan, akibatnya konsumen menemui kesulitan dalam membedakan mana produk dodol yang berkualitas baik dan mana produk dodol yang berkualitas rendah. Dodol Garut merupakan salah satu komoditas yang mampu mengangkat citra Kabupaten Garut sebagai penghasil Dodol yang berkualitas.</item>
        <item>Getuk goreng adalah makanan asli khas Sokaraja, Banyumas. Getuk goreng terbuat dari bahan dasar singkong, atau biasanya masyarakat Banyumas menyebutnya budin, dengan tambahan gula jawa membuat getuk goreng ini menjadi manis dan gurih.</item>
        <item>Soami, Kasoami atau sangkola adalah makanan pokok Orang Wakatobi,Makanan ini menjadi makanan khas daerah Sulawesi Tenggara (Wakatobi, Muna dan Kabupaten Buton). Soami memiliki arti makanan dari ubi kayu yang diolah dengan uap panas (soa).[1] Orang Wakatobi menyebutnya Soami, sementara orang Buton dan Muna menyebutnya kasuami, sementara sebagian orang lainnya menyebutnya sangkola. Namun, umumnya makanan tersebut memiliki bentuk yang sama, yaitu menyerupai tumpeng dan berwarna putih kekuning-kuningan.</item>
        <item>Kue ape atau serabi Jakarta merupakan jajanan khas dari Jakarta, yang memiliki bentuk menyerupai pancake. Kue yang biasa dijajakan di jalan atau di depan sekolah ini dibuat dari tepung terigu yang dicampur dengan susu. Saat ini, Kue ape dijual dengan berbagai variasi warna dan taburan di atasnya (keju atau meses).</item>
        <item>Kue semprong adalah kue kering yang berasal dari Indonesia. Kue ini berbentuk silinder panjang seperti pipa dengan rasa yang khas dan unik. Kue semprong juga hadir dalam bentuk lain, seperti bentuk segitiga dan persegi panjang. Rasa kue ini tidak terlalu manis dan terasa renyah serta gurih ketika digigit.</item>
        <item>Lempuk durian, sering disebut juga dodol durian atau lempuk durian, serta dalam bahasa Tionghoa disebut dengan (Hanzi: 榴槤粄; Hakka: Liu-lian-pan), adalah salah satu jenis lempuk yang dibuat dengan bahan daging durian. Lempuk durian populer sebagai jajanan khas dari beberapa daerah di Indonesia, terutama di Sumatra seperti Bengkulu, Jambi, Bengkalis, Pekanbaru, Palembang, Bangka Belitung, Lampung, serta Kalimantan misalnya Pontianak dan Samarinda.</item>
        <item>Serabi (Sanskerta: wangi, harum) adalah jajanan tradisional yang berasal dari Indonesia yang diperkirakan sudah dikenal sejak zaman Kerajaan Mataram. Panganan ini beberapa kali disebut dalam Serat Centhini, yang ditulis para pujangga keraton Surakarta selama 1814–1823 atas perintah Pakubuwana V, sebagai sesaji dalam prosesi ijab atau pernikahan, ruwahan, dan terutama kudapan. Pada tembang (pupuh) ke-155 bait 18, diceritakan bahwa serabi merupakan salah satu dari sekian banyak jenis jajanan yang dijajakan di halaman rumah pada saat pertunjukan wayang kulit di malam hari. Disebutkan pula, bahwa sembilan macam serabi juga merupakan bagian dari aneka penganan yang perlu disiapkan sebagai sajen dalam pertunjukan wayang dan ruwatan (Pupuh 157:7–8)</item>
        <item>Tenteng Malino adalah makanan khas Bugis-Makassar yang berasal dari Kota Malino, Gowa, Sulawesi Selatan. Bahan dasar dari Makanan ini adalah Gula merah dan Kacang tanah, sehingga sering disebut Baje Canggoreng. Aslinya, bentuk kemasan makanan ini berbentuk seperti permen dengan pembungkus dari Kulit jagung[1]. Tapi seiring perkembangan, kemasannya diganti menjadi plastik. Pembuatan makanan ini dimulai dari mencairkan gula merah pada wajan atau panci sampai mengental lalu dicampurkannya Kacang tanah ke dalam lumeran Gula merah. Diaduk hingga mulai mendingin dan dicetak sesuai ukuran dan dikemas dengan plastik.</item>
    </string-array>
    <string-array name="data_dom">
        <item>Pathuk\n
        Kota Yogyakarta\n
        DI Yogyakarta</item>
        <item>Medan\n
            Sumatera Utara</item>
        <item>Madiun</item>
        <item>Kabupaten Pacitan</item>
        <item>Garut</item>
        <item>Sokaraja </item>
        <item>Sulawesi Tenggara</item>
        <item>Jakarta</item>
        <item>Kabupaten Sekadau</item>
        <item>Bengkulu, Jambi, Bengkalis, Pekanbaru</item>
        <item>Surakarta</item>
        <item>Kota Malino, Sulawesi Selatan</item>
    </string-array>
    <string-array name="data_type">
        <item>Kue</item>
        <item>Kue</item>
        <item>Kue</item>
        <item>Hidangan</item>
        <item>Kue</item>
        <item>Kue</item>
        <item>Kue</item>
        <item>Kue</item>
        <item>Kue Kering</item>
        <item>Lempuk</item>
        <item>Panekuk</item>
        <item>Kue</item>
    </string-array>
    <string name="title">Bakpia Pathok</string>
    <string name="content_text"> Bakpia pathok adalah kue berbentuk bulat pipih, terbuat dari campuran kacang hijau dengan gula, yang dibungkus dengan tepung, lalu dipanggang. Bakpia asal mulanya berasal dari daratan Tiongkok. Bakpia pathok adalah salah satu varian bakpia yang berkembang di Yogyakarta. Saat ini, bakpia pathuk menjadi salah satu makanan khas sekaligus oleh-oleh khas dari Yogyakarta. Ini merupakan salah satu wujud nyata akulturasi budaya Tiongkok dan budaya Jawa, dalam hal ini budaya Yogyakarta.</string>
    <string name="content_specs_display">Yogyakarta</string>
    <string name="content_specs_size">Kue</string>
    <string name="content_specs_battery">Secara historis, bakpia adalah makanan impor dari negeri Tiongkok yang dibawa oleh para imigran Tionghoa pada dekade awal abad ke-20. Bakpia konon sudah ada sejak tahun 1930-an. Dimiliki oleh keluarga-keluarga pedagang Tionghoa yang banyak menempati pusat Kota Yogyakarta. Jenis makanan ini awalnya bukanlah makanan komersial, juga bukan makanan yang bernilai kultural seperti kue keranjang yang sering menjadi kue dalam perayaan Imlek. Posisinya adalah sebagai pelengkap dari kue keranjang tersebut dan sebagai kudapan keluarga.</string>
</resources>